--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,19 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+
+:root.theme-light {
+--color-text: var(--color-black, #000); 
+}
+
+
+:root.theme-dark {
+--color-text:var(--color-green, #00CC14); 
+}
+
+
+
+
+@media (prefers-color-scheme: dark) {
+
+}
