--- a/styles/variables.css
+++ b/styles/variables.css
@@ -5,10 +5,6 @@
     --color-black: #000000;
     --color-green: #00cc14;
     --background-color: #fff; 
-
-    --background-image: repeating-linear-gradient(to left,
-                #d3d3d3 0 2px,
-                transparent 2px 4px),
-            repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
-            linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
+    --stripes-gradient: #d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px;
+    --gradient-saturation: #e7e7e7 0.01%, #1a1a1a 100%;
 }
