--- a/styles/themes.css
+++ b/styles/themes.css
@@ -27,4 +27,12 @@
 
 
 
-@media (prefers-color-scheme: dark) {}
+@media (prefers-color-scheme: dark) {
+    :root {
+        --font-main: "Inter-Variable", serif;
+        --font-accent: "PressStart2P", fantasy;
+        --background-color: #000;
+        --stripes-gradient: #000, #000 2px, transparent 2px, transparent 4px;
+        --gradient-saturation: #007f0c 0.01%, #004306 100%;
+    }
+}
