--- a/styles/style.css
+++ b/styles/style.css
@@ -94,21 +94,42 @@
   }
 }
 
-    .cards-list {
-      background-color: var(--background-color);
-    }
+.cards-list {
+  background-color: var(--background-color);
+}
 
-        .cards-list__item {
+.cards-list__item {
   margin: 54px;
   border: 2px solid #000000;
 }
 
+.cards-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .card__title {
   font-size: 18px;
+  padding: 3px 10px 6px;
+  display: inline-block;
+  text-align: left;
 }
 
 .card__img-title {
+  position: absolute;
+  color: var(--color-black);
+  -webkit-text-stroke: 1px #FFFFFF;
+  opacity: 0.5;
   font-family: var(--font-accent);
   font-size: 14px;
-  color: var(--color-black);
+  font-weight: 400;
+  z-index: 1;
+
+}
+
+.card__img {
+  display: block;
+  inline-size: 100%;
+  block-size: 100%;
 }
