--- a/styles/themes.css
+++ b/styles/themes.css
@@ -12,6 +12,7 @@
     --background-color: #fff;
     --stripes-gradient: #d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px;
     --gradient-saturation: #e7e7e7 0.01%, #1a1a1a 100%;
+    --outline-color: #000;
 }
 
 
@@ -22,6 +23,7 @@
     --background-color: #000;
     --stripes-gradient: #000, #000 2px, transparent 2px, transparent 4px;
     --gradient-saturation: #007f0c 0.01%, #004306 100%;
+    --outline-color: #00CC14;
 }
 
 
@@ -34,5 +36,7 @@
         --background-color: #000;
         --stripes-gradient: #000, #000 2px, transparent 2px, transparent 4px;
         --gradient-saturation: #007f0c 0.01%, #004306 100%;
+        --outline-color: #000;
+
     }
 }
