--- a/styles/style.css
+++ b/styles/style.css
@@ -183,14 +183,17 @@
 
 /* Фильтры */
 
+.filter_contrast {
+filter: contrast(30%);
+}
 
-
-.saturate {
+.filter_saturate {
   filter: saturate(250%);
 }
 
-
-
+.filter_grayscale {
+filter: grayscale(0.6);
+}
 
 .filter_invert {
   filter: invert(0.7);
@@ -205,5 +208,5 @@
 }
 
 .filter_mix {
-
+filter: hue-rotate(70deg) invert(31%);
 }
