--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,10 @@
 
 */
 
+.svg-sprite {
+  display: none;
+}
+
 .page {
   display: flex;
   flex-direction: column;
@@ -184,7 +188,7 @@
 /* Фильтры */
 
 .filter_contrast {
-filter: contrast(30%);
+  filter: contrast(30%);
 }
 
 .filter_saturate {
@@ -192,7 +196,7 @@ filter: contrast(30%);
 }
 
 .filter_grayscale {
-filter: grayscale(0.6);
+  filter: grayscale(0.6);
 }
 
 .filter_invert {
@@ -208,5 +212,36 @@ filter: grayscale(0.6);
 }
 
 .filter_mix {
-filter: hue-rotate(70deg) invert(31%);
+  filter: hue-rotate(70deg) invert(31%);
+}
+
+
+
+
+
+
+/*Футер*/
+.button__save {
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  position: relative;
+  inline-size: 335px;
+  height: 55px;
+  transition: 0.5s;
+  cursor: pointer;
+  border: 2px solid var(--color-black);
+  background-color: var(--background-color);
+  gap: 8px;
+}
+
+.button__icon {
+  margin-left: 19px;
+  width: 21px;
+  height: 21px;
+}
+
+.button__text {
+  font-family: var(--font-accent);
+  font-size: 14px;
 }
