--- a/styles/style.css
+++ b/styles/style.css
@@ -258,6 +258,9 @@
 
 
 .dialog {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   color: #000;
   background-color: var(--background-color);
   inline-size: 353px;
@@ -265,12 +268,17 @@
   text-transform: uppercase;
   line-height: 150%;
 }
+
+.dialog:not([open]) {
+  pointer-events: none;
+  opacity: 0;
+} 
+
 .container__dialog {
 display: flex;
-  flex-direction: row;
   gap: 20px;
   max-width: 293px;
-  margin: 30px 30px 0 30px;}
+}
 
 .button-image__save {
   display: flex;
@@ -280,7 +288,6 @@ display: flex;
 }
 
 .button__dialog {
-  line-height: 1.5;
   width: 293px;
   height: 38px;
   border: 2px solid;
@@ -289,9 +296,13 @@ display: flex;
 
 }
 
-
-
-
 dialog::backdrop {
   background-color: rgba(0, 0, 0, 0.4);
+}
+
+.button-dialog__text {
+  font-family: var(--font-accent);
+    font-size: 14px;
+    text-transform: uppercase;
+    cursor: pointer;
 }
