--- a/styles/style.css
+++ b/styles/style.css
@@ -88,16 +88,33 @@
   border: transparent;
   outline: none;
 
-
   &:hover {
-    cursor: pointer;
-    opacity: 0.6;
+      cursor: pointer;
+      opacity: 0.6;
+
   }
 
   &:focus {
     outline: none;
   }
 }
+
+ .theme-menu__button::after {
+   content: '';
+   position: absolute;
+   bottom: -3px;
+   left: 0;
+   width: 0;
+   height: 2px;
+   background-color: var(--color-black);
+   transition: width 0.3s ease;
+ }
+
+ .theme-menu__button:hover::after,
+ .theme-menu__button:focus::after {
+   width: 100%;
+ }
+
 
 .theme-menu__button:disabled::before {
   content: "▶";
@@ -111,6 +128,11 @@
   margin-right: 6px;
   animation: shift 0.5s ease-in-out infinite alternate;
 }
+
+
+
+
+
 
 @keyframes shift {
   0% {
