--- a/styles/style.css
+++ b/styles/style.css
@@ -149,6 +149,7 @@
   flex-direction: column;
   align-items: center;
   background-color: var(--background-color);
+  margin: 50px;
 }
 
 
@@ -217,6 +218,11 @@
 }
 
 
+.like-icon {
+  cursor: pointer;
+}
+
+
 /* Фильтры */
 
 .filter_contrast {
@@ -276,6 +282,7 @@
 .button__text {
   font-family: var(--font-accent);
   font-size: 14px;
+  cursor: pointer;
 }
 
 
