--- a/styles/themes.css
+++ b/styles/themes.css
@@ -13,6 +13,8 @@
     --stripes-gradient: #d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px;
     --gradient-saturation: #e7e7e7 0.01%, #1a1a1a 100%;
     --outline-color: #000;
+    --button-background-color: #fff;
+    --accent-color: #000;
 }
 
 
@@ -24,6 +26,8 @@
     --stripes-gradient: #000, #000 2px, transparent 2px, transparent 4px;
     --gradient-saturation: #007f0c 0.01%, #004306 100%;
     --outline-color: #00CC14;
+    --button-background-color: #000;
+    --accent-color: #00CC14;
 }
 
 
@@ -31,12 +35,14 @@
 
 @media (prefers-color-scheme: dark) {
     :root {
+        --color-text: var(--color-green, #00CC14);
         --font-main: "Inter-Variable", serif;
         --font-accent: "PressStart2P", fantasy;
         --background-color: #000;
         --stripes-gradient: #000, #000 2px, transparent 2px, transparent 4px;
         --gradient-saturation: #007f0c 0.01%, #004306 100%;
-        --outline-color: #000;
-
+        --outline-color: #00CC14;
+        --button-background-color: #000;
+        --accent-color: #00CC14;
     }
 }
