--- a/styles/style.css
+++ b/styles/style.css
@@ -104,7 +104,7 @@
     opacity: 0.6;
   }
 
-  &focus-visible::after {
+  &:focus-visible::after {
     transform-origin: bottom left;
     transform: scaleX(1);
   }
@@ -123,6 +123,16 @@
 .theme-menu__button:disabled::before {
   content: "▶";
   color: currentColor;
+}
+
+@keyframes shift {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(4px);
+  }
 }
 
 .theme-menu__button::after {
@@ -174,13 +184,29 @@
   top: 22px;
   right: 11px;
   color: var(--accent-color);
-  -webkit-text-stroke: 1px #FFFFFF;
+  -webkit-text-stroke: 1px var(--stroke-color);
   opacity: 0.5;
   font-family: var(--font-accent);
   font-size: 14px;
   font-weight: 400;
   z-index: 1;
 
+}
+
+
+/* Проверка поддержки text-stroke */
+@supports (text-stroke: 1px var(--stroke-color)) {
+  .card__img-title {
+    -webkit-text-stroke: 1px var(--stroke-color);
+  }
+}
+
+/* Фоллбэк с использованием text-shadow */
+@supports not (text-stroke: 1px var(--stroke-color)) {
+  .card__img-title {
+    text-shadow: 1px 1px 0 var(--stroke-color), -1px 1px 0 var(--stroke-color),
+      1px -1px 0 var(--stroke-color), -1px -1px 0 var(--stroke-color);
+  }
 }
 
 .card__img {
@@ -223,8 +249,7 @@
 }
 
 .card__like-button,
-.like-icon,
-.button__save {
+.like-icon {
   background-color: var(--button-background-color);
   cursor: pointer;
 }
@@ -233,6 +258,52 @@
 .card__icon-button .sparks {
   opacity: 0;
 }
+
+
+.button {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid var(--accent-color);
+  background-color: var(--background-color);
+  overflow: hidden;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 0.9;
+  cursor: pointer;
+  transition: box-shadow 0.5s;
+  block-size: 38px;
+}
+
+.button:focus-visible {
+  box-shadow: 2px 2px 0 var(--accent-color);
+  transition: 0.3s ease;
+}
+
+.button::after {
+  display: block;
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background-color: var(--accent-color);
+  transition: 0.5s ease-in-out;
+  transform: translateX(-100%);
+}
+
+.button:hover::after {
+  transform: translateX(0);
+}
+
+
+
+
+
+
+
 
 
 /* Стили для анимации лайка в сердце */
@@ -298,28 +369,11 @@
   animation: like-with-sparks 0.3s ease-in 0.3s;
 }
 
-
 .card__like-button {
   min-width: 130px;
-  min-height: 38px;
+    min-height: 38px;
   border: 2px solid var(--accent-color);
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -354,19 +408,9 @@
 }
 
 
-
-
-
-
 /*Футер*/
 .button__save {
-  display: flex;
-  justify-items: center;
-  align-items: center;
-  position: relative;
   height: 55px;
-  transition: 0.5s;
-  border: 2px solid var(--color-black);
   padding: 15px 20px;
   margin-top: 50px;
   margin-bottom: 103px;
