--- a/styles/themes.css
+++ b/styles/themes.css
@@ -15,6 +15,7 @@
     --outline-color: #000;
     --button-background-color: #fff;
     --accent-color: #000;
+    --stroke-color: #fff; 
 }
 
 
@@ -28,9 +29,8 @@
     --outline-color: #00CC14;
     --button-background-color: #000;
     --accent-color: #00CC14;
+    --stroke-color: #000;
 }
-
-
 
 
 @media (prefers-color-scheme: dark) {
@@ -44,5 +44,6 @@
         --outline-color: #00CC14;
         --button-background-color: #000;
         --accent-color: #00CC14;
+        --stroke-color: #000; 
     }
 }
