--- a/styles/animations.css
+++ b/styles/animations.css
@@ -22,3 +22,76 @@
         transform: translateX(4px);
     }
 }
+
+@keyframes sparks {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+/* Стили для анимации лайка в сердце */
+
+.main-body {
+    fill: transparent;
+    transition: fill 0.3s linear;
+}
+
+.like-icon:hover .main-body {
+    fill: var(--accent-color, #000);
+    transition: fill 0.3s 0.05s linear;
+}
+
+.like-icon:active .main-body {
+    fill: red;
+    transition: fill 0.3s 0.05s linear;
+}
+
+.core {
+    fill: transparent;
+    transition: fill 0.3s linear;
+}
+
+.like-icon:hover .core {
+    fill: var(--accent-color, #000);
+    transition: fill 0.3s linear;
+}
+
+.like-icon:active .core {
+    fill: red;
+    transition: fill 0.3s linear;
+}
+
+/* Стили для поставленного лайка */
+
+.contour {
+    fill: var(--accent-color, #000);
+    transition: fill 0.1s linear;
+}
+
+.like-icon.is-liked .main-body {
+    fill: red;
+    transition: fill 0.3s 0.05s linear;
+}
+
+.like-icon.is-liked .core {
+    fill: red;
+    transition: fill 0.3s linear;
+}
+
+.like-icon.is-liked .contour {
+    fill: red;
+    transition: fill 0.3s 0.06s linear;
+}
+
+.like-icon.is-liked .heart {
+    transform-origin: center;
+    animation: like-with-scale 0.3s ease-in 0.1s;
+}
+
+.like-icon.is-liked .sparks {
+    animation: like-with-sparks 0.3s ease-in 0.3s;
+}
