--- a/styles/style.css
+++ b/styles/style.css
@@ -348,6 +348,7 @@
 .like-icon.is-liked .sparks {
   animation: like-with-sparks 0.3s ease-in 0.3s;
 }
+/*Стили для поставленного лайка*/
 
 .card__like-button {
   min-width: 130px;
