--- a/styles/style.css
+++ b/styles/style.css
@@ -32,6 +32,7 @@
   min-inline-size: 320px;
   min-block-size: 100dvb;
   font-weight: 700;
+  font-size: 18px;
 }
 
 .header {
@@ -41,7 +42,7 @@
   font-family: var(--font-accent);
   background-color: var(--background-color);
   border: 2px solid var(--outline-color);
-  inline-size: clamp(23.438rem, 3.125rem + 65vw, 43.75rem);
+  width: var(--container-width);
   margin: 100px 0 100px 0;
   padding-block-end: 23px;
 }
@@ -49,7 +50,7 @@
 .header__logo {
   font-family: var(--font-accent);
   font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
-  line-height: 65px;
+  font-weight: 400;
   margin-block-start: 136px;
 }
 
@@ -145,11 +146,14 @@
   }
 }
 
+.main {
+  width: var(--container-width);
+}
+
 .cards-list {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 50px;
 }
 
 .cards-list__item {
@@ -209,6 +213,9 @@
   flex-direction: column;
   gap: 27px;
   padding: 25px 25px 25px;
+  font-family:var(--font-main);
+  font-size: 18px;
+  font-weight: 400;
 }
 
 .card__buttons {
@@ -252,8 +259,9 @@
   font-size: 14px;
   line-height: 0.9;
   cursor: pointer;
-  transition: box-shadow 0.5s;
+  transition: box-shadow 0.5s, color 0.5s;
   block-size: 38px;
+  color: var(--color-text);
 }
 
 .button:focus {
@@ -280,6 +288,11 @@
 
 .button:hover::after {
   transform: translateX(0);
+
+}
+
+.button:hover {
+  color: #fff;
 }
 
 .like-icon {
@@ -400,11 +413,11 @@
 }
 
 .button__text {
-  color: var(--color-text);
   flex-shrink: 0;
   font-family: var(--font-accent);
   font-size: 14px;
   cursor: pointer;
+  z-index: 1;
 }
 
 .dialog {
@@ -462,6 +475,7 @@ dialog::backdrop {
   .header {
     inline-size: 100%;
   }
+
 
   .card__title {
     max-inline-size: 316px;
