--- a/styles/style.css
+++ b/styles/style.css
@@ -143,6 +143,7 @@
 .theme-menu__button:focus {
   &::after {
     width: 100%;
+    opacity: 0.6;
   }
 }
 
@@ -461,7 +462,7 @@
 }
 
 dialog::backdrop {
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgb(0 0 0 / 0.75);
 }
 
 .button-dialog__text {
