--- a/styles/style.css
+++ b/styles/style.css
@@ -139,7 +139,6 @@
   transition: width 0.3s ease;
 }
 
-.theme-menu__button:hover,
 .theme-menu__button:focus {
   &::after {
     width: 100%;
@@ -283,7 +282,7 @@
   width: 100%;
   height: 100%;
   background-color: var(--accent-color);
-  transition: 0.5s ease-in-out;
+  transition: 0.3s ease;
   transform: translateX(-100%);
 }
 
@@ -420,6 +419,7 @@
   cursor: pointer;
   z-index: 1;
   max-width: 300px;
+  color: var(--color-text);
 }
 
 .dialog {
